tests/diagnostics_golden/diag_rule5_nan.txt
Diagnostics Golden: Rule5 Nan
Source: tests/negative/neg_rule5_nan.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule5_nan.safe:20:14: error: floating expression may be NaN at narrowing
  |
  | 20 |       return temp (x / y)  -- ERROR: 0.0/0.0 = NaN, cannot narrow
  |    |              ^~~~~~~~~~~~
  |
------------------------------------------------------------------------
